--- a/css/style.css
+++ b/css/style.css
@@ -663,3 +663,20 @@ table.dataTable.no-footer {
 }
 
 /******** data table end ********/
+
+
+
+
+@media(max-width:767px){
+	.member-block .action{
+		transform: translateY(50%) !important
+	}
+	
+	}
+	
+	@media(min-width:767px){
+		.member-block .action{
+			transform: translateY(-50%) !important
+		}
+		
+		}
